Update azure-core to Use New Javadoc Tooling