@@ -49,6 +49,12 @@
     <jacoco.skip.coverage.check>true</jacoco.skip.coverage.check>
     <legal>
       <![CDATA[[INFO] Any downloads listed may be third party software.  Microsoft grants you no rights for third party software.]]></legal>
+    <javaModulesSurefireArgLine>
+      --add-opens com.azure.core.http.jdk.httpclient/com.azure.core.http.jdk.httpclient=ALL-UNNAMED
+    </javaModulesSurefireArgLine>
+    <additionalSurefireArgLine>
+      -Djdk.httpclient.allowRestrictedHeaders=Content-Length
+    </additionalSurefireArgLine>
   </properties>
 
   <developers>
@@ -244,9 +250,6 @@
             <executions>
               <execution>
                 <id>default-compile</id>
-                <configuration>
-                  <release>11</release>
-                </configuration>
               </execution>
               <!-- Here the 'base-compile' execution section of java-lts profile defined in parent pom.client.xml is overridden.
                In parent pom, this execution entry enforces java8 release compatibility. The new http APIs are not available
